--- a/DataProcess/DataProcess.csproj
+++ b/DataProcess/DataProcess.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataBaseHelper.cs" />
+    <Compile Include="OracleHelper.cs" />
     <Compile Include="DataConvertCenter.cs" />
     <Compile Include="IDataHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
