Day work - Add CloseClientByListener to AsyncSocketListener.cs - Add invoking of CloseClientByListener to MainForm.cs - Add Thread safety to lstClient in MainForm.cs

--- a/DataProcess/DataProcess.csproj
+++ b/DataProcess/DataProcess.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataUtils.cs" />
+    <Compile Include="HandleResultEventArgs.cs" />
     <Compile Include="OracleHelper.cs" />
     <Compile Include="DataConvertCenter.cs" />
     <Compile Include="IDataHandle.cs" />
