--- a/MnnSocket/MnnSocket.csproj
+++ b/MnnSocket/MnnSocket.csproj
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="AsyncSocketListener.cs" />
     <Compile Include="AsyncSocketSender.cs" />
+    <Compile Include="ClientEventArgs.cs" />
+    <Compile Include="ListenerEventArgs.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
