--- a/TransferStation/App.config
+++ b/TransferStation/App.config
@@ -5,5 +5,6 @@
        (ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.105)(PORT=1521))) 
        (CONNECT_DATA=(SERVICE_NAME=water))); 
        User Id=wateruser;Password=zjhthtwwx288185767;"/>
+    <add name="QX_Entities" connectionString="metadata=res://*/QX.csdl|res://*/QX.ssdl|res://*/QX.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.11)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
