--- a/MnnPlugin/MnnPlugin.csproj
+++ b/MnnPlugin/MnnPlugin.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{1C09918B-E585-46EB-9161-4B19B685E997}</ProjectGuid>
+    <ProjectGuid>{0AFB7630-65E6-41EF-AC65-8A7814C6D82F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataProcess</RootNamespace>
-    <AssemblyName>DataProcess</AssemblyName>
+    <RootNamespace>MnnPlugin</RootNamespace>
+    <AssemblyName>MnnPlugin</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,16 +40,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataHandleSuccessEventArgs.cs" />
-    <Compile Include="DataConvertCenter.cs" />
+    <Compile Include="AppDomainProxy.cs" />
+    <Compile Include="DataHandlerManager.cs" />
     <Compile Include="IDataHandle.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MnnSocket\MnnSocket.csproj">
-      <Project>{554F1D48-F41A-4A23-A1E4-05A7F4058AB7}</Project>
-      <Name>MnnSocket</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
