--- a/TransferStation/TransferStation.csproj
+++ b/TransferStation/TransferStation.csproj
@@ -34,7 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ARMSoft.FlexibleTreeView, Version=4.2.0.0, Culture=neutral, PublicKeyToken=a0f39221011ef811" />
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -58,11 +57,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StationSetting.cs" />
+    <Compile Include="StationState.cs" />
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\licenses.licx" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -86,9 +84,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DataProcess\DataProcess.csproj">
-      <Project>{1C09918B-E585-46EB-9161-4B19B685E997}</Project>
-      <Name>DataProcess</Name>
+    <ProjectReference Include="..\MnnPlugin\MnnPlugin.csproj">
+      <Project>{0AFB7630-65E6-41EF-AC65-8A7814C6D82F}</Project>
+      <Name>MnnPlugin</Name>
     </ProjectReference>
     <ProjectReference Include="..\MnnSocket\MnnSocket.csproj">
       <Project>{554F1D48-F41A-4A23-A1E4-05A7F4058AB7}</Project>
