--- a/MnnPlugin/MnnPlugin.csproj
+++ b/MnnPlugin/MnnPlugin.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppDomainProxy.cs" />
+    <Compile Include="PluginItem.cs" />
     <Compile Include="PluginManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
