--- a/StationConsole/App.config
+++ b/StationConsole/App.config
@@ -2,5 +2,7 @@
 <configuration>
   <connectionStrings>
     <add name="QX_Entities" connectionString="metadata=res://*/QX.csdl|res://*/QX.ssdl|res://*/QX.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.11)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
+    <add name="ZLS_Entities" connectionString="metadata=res://*/ZLS.csdl|res://*/ZLS.ssdl|res://*/ZLS.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.11)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
+    <add name="SK_Entities" connectionString="metadata=res://*/SK.csdl|res://*/SK.ssdl|res://*/SK.msl;provider=Oracle.DataAccess.Client;provider connection string=&quot;DATA SOURCE=(DESCRIPTION=(ADDRESS_LIST=(ADDRESS=(PROTOCOL=TCP)(HOST=192.168.3.11)(PORT=1521)))(CONNECT_DATA=(SERVICE_NAME=water)));PASSWORD=abc;USER ID=WATERUSER&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 </configuration>
