--- a/Mnn/Mnn.csproj
+++ b/Mnn/Mnn.csproj
@@ -43,12 +43,15 @@
     <Compile Include="MnnPlugin\AppDomainProxy.cs" />
     <Compile Include="MnnPlugin\PluginItem.cs" />
     <Compile Include="MnnPlugin\PluginManager.cs" />
+    <Compile Include="MnnSerialPort\AsyncSerailPort.cs" />
+    <Compile Include="MnnSerialPort\AsyncSerailPortEventArgs.cs" />
     <Compile Include="MnnSocket\AsyncSocketListenerItem.cs" />
     <Compile Include="MnnSocket\AsyncSocketListenerManager.cs" />
     <Compile Include="MnnSocket\AsyncSocketSender.cs" />
     <Compile Include="MnnSocket\ClientEventArgs.cs" />
     <Compile Include="MnnSocket\ListenerEventArgs.cs" />
     <Compile Include="MnnSocket\TcpServer.cs" />
+    <Compile Include="MnnUtil\ExprSolve.cs" />
     <Compile Include="MnnUtil\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
