--- a/Mnn/Mnn.csproj
+++ b/Mnn/Mnn.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MnnSocket\ClientEventArgs.cs" />
     <Compile Include="MnnSocket\ListenerEventArgs.cs" />
     <Compile Include="MnnSocket\TcpServer.cs" />
+    <Compile Include="MnnSocket\UdpServer.cs" />
     <Compile Include="MnnUtil\ExprSolve.cs" />
     <Compile Include="MnnUtil\Logger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
