--- a/TcpAttacker/TcpAttacker.csproj
+++ b/TcpAttacker/TcpAttacker.csproj
@@ -48,7 +48,7 @@
     <Compile Include="TcpAttacker.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="config\message.xml">
+    <Content Include="config.xml">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
