--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,10 @@ _ReSharper*/
 [Tt]est[Rr]esult*
 *.vssscc
 $tf*/
+
+.svn/
+MnnTester/
+SocketTransfer/
+ZLS_SerialPortService/
+Module_*/
+Oracle.DataAccess.dll
