--- a/StationConsole/StationConsole.csproj
+++ b/StationConsole/StationConsole.csproj
@@ -77,6 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="PluginUnitState.cs" />
     <Compile Include="ServerUnitState.cs" />
     <Compile Include="CtrlLayer\ServerUnit.cs" />
     <Compile Include="InputDialog.xaml.cs">
