--- a/StationConsole/StationConsole.csproj
+++ b/StationConsole/StationConsole.csproj
@@ -61,7 +61,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="CtrlLayer\PluginUnit.cs" />
+    <Compile Include="CtrlLayer\ModuleUnit.cs" />
     <Compile Include="CtrlLayer\Controler.cs" />
     <Compile Include="ClientUnitState.cs" />
     <Compile Include="CtrlLayer\ClientUnit.cs" />
@@ -77,7 +77,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="PluginUnitState.cs" />
+    <Compile Include="ModuleUnitState.cs" />
     <Compile Include="ServerUnitState.cs" />
     <Compile Include="CtrlLayer\ServerUnit.cs" />
     <Compile Include="InputDialog.xaml.cs">
