--- a/SockDebug/ScokDebug.csproj
+++ b/SockDebug/ScokDebug.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{B8109D67-7220-4FBA-84D6-1166B114CF47}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TcpDebugger</RootNamespace>
-    <AssemblyName>TcpDebugger</AssemblyName>
+    <RootNamespace>ScokDebug</RootNamespace>
+    <AssemblyName>ScokDebug</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
