--- a/Mnn/Mnn.csproj
+++ b/Mnn/Mnn.csproj
@@ -59,6 +59,7 @@
     <Compile Include="MnnSocket\SockServer.cs" />
     <Compile Include="MnnSocket\ListenEventArgs.cs" />
     <Compile Include="MnnSocket\TcpServer.cs" />
+    <Compile Include="MnnSocket\SockSess.cs" />
     <Compile Include="MnnSocket\UdpServer.cs" />
     <Compile Include="Discard\MnnAtCmd\AtCmdPipeServer.cs" />
     <Compile Include="AtCommand.cs" />
