--- a/SockClient/SockClient.csproj
+++ b/SockClient/SockClient.csproj
@@ -68,6 +68,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="CmdUnit.cs" />
+    <Compile Include="CnnUnit.cs" />
     <Compile Include="InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
     </Compile>
@@ -105,6 +106,11 @@
       <Project>{8C1BDA51-F559-4472-A895-6BF82C0A06DE}</Project>
       <Name>Mnn</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="sockclient.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
