--- a/SockClient/SockClient.csproj
+++ b/SockClient/SockClient.csproj
@@ -117,6 +117,7 @@
   <ItemGroup>
     <Resource Include="sockclient.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </Resource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
