--- a/SockConn/SockConn.csproj
+++ b/SockConn/SockConn.csproj
@@ -122,7 +122,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="sockclient.xml">
+    <Content Include="sockconn.xml">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <SubType>Designer</SubType>
     </Content>
